Fix logging of b2r. Tweak alignment.

--- a/html/style.css
+++ b/html/style.css
@@ -364,6 +364,7 @@ div.centering { text-align: center }
     display: grid;
     gap: 10px 15px;
     padding: 1ex;
+    align-items: self-start;
 }
 .grid_container label {
     text-align: right;
